--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -50,9 +50,6 @@
 	height: 100%;
 	border-bottom: 3px solid transparent;
   }
-  .fa-code {
-	margin-left: 1rem;
-  }
   
   .nav-item {
 	line-height: 40px;
@@ -73,13 +70,13 @@
 	background: var(--primary-accent-color);
   }
   
-  .nav-item.navbar-active {
-	color: var(--primary-accent-color);
-	border: 1px solid var(--primary-accent-color);
-  }
-  
   .nav-icon {
 	display: none;
+  }
+
+  .navbar-active {
+	  color: var(--primary-accent-color);
+	  font-weight: 600;
   }
   
   @media screen and (max-width: 960px) {
@@ -102,10 +99,7 @@
 	  transition: all 0.5s ease;
 	  z-index: 1;
 	}
-	.nav-item .navbar-active {
-	  color: var(--secondary-text-color);
-	  border: none;
-	}
+	
 	.nav-links {
 	  padding: 1.5rem;
 	  width: 100%;
