--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,9 +1,9 @@
 .navbar {
 	background-color: var(--primary-bg-color);
 	height: 142px;
-	display: flex;
+	/* display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
 	font-family: var(--secondary-font);
 	font-size: 24px;
 	position: sticky;
@@ -12,9 +12,9 @@
   }
   
   .nav-container {
-	display: flex;
+	/* display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
 	width: 100%;
 	height: 80px;
 	max-width: 1500px;
