--- a/src/components/custom-button/customButton.css
+++ b/src/components/custom-button/customButton.css
@@ -1,15 +1,11 @@
 .customButton {
   color: var(--primary-accent-color);
   font-family: var(--primary-font);
-  width: 162px;
-  height: 38px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 30px;
-  line-height: 35px;
+  font-weight: 800;
   text-decoration-line: underline;
   cursor: pointer;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 0.2s;
 }
 
 .customButton:hover {
