--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -85,11 +85,16 @@
   }
   
   @media screen and (max-width: 960px) {
+
+	.nav-items-container {
+		height: 100vh;
+	}
 	
 	.nav-menu {
 	  display: flex;
 	  flex-direction: column;
 	  width: 100%;
+	  height: 100vh;
 	  position: absolute;
 	  top: 142px;
 	  left: -110%;
@@ -103,6 +108,8 @@
 	  opacity: 1;
 	  transition: all 0.5s ease;
 	  z-index: 1;
+	  overflow-y: hidden;
+	  overflow-x: hidden;
 	}
 	
 	.nav-links {
