--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -15,15 +15,15 @@
 }
 
 .navbar {
-  height: 110px;
+  height: 7rem;
   font-family: var(--secondary-font);
-  font-size: 24px;
+  font-size: 1.55rem;
 }
 
 .nav-container {
   width: 100%;
-  height: 80px;
-  max-width: 1500px;
+  height: 5rem;
+  max-width: 93.75rem;
 }
 
 .navbar-main-container {
@@ -36,7 +36,7 @@
 
 .nav-logo {
   align-items: center;
-  margin-left: 20px;
+  margin-left: 1.25rem;
   text-decoration: none;
   flex-grow: 1;
 }
@@ -53,18 +53,18 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
-  border-bottom: 3px solid transparent;
+  border-bottom: 0.2rem solid transparent;
 }
 
 .nav-item {
-  line-height: 40px;
+  line-height: 2.5rem;
   margin-right: 1rem;
 }
 
 .nav-item:after {
   content: '';
   display: block;
-  height: 3px;
+  height: 0.2rem;
   width: 0;
   background: transparent;
   transition: width 0.7s ease, background-color 0.5s ease;
@@ -95,7 +95,7 @@
     width: 100%;
     height: 100vh;
     position: absolute;
-    top: 142px;
+    top: 7rem;
     left: -110%;
     opacity: 1;
     transition: all 0.5s ease;
