--- a/src/components/ToTop/toTop.css
+++ b/src/components/ToTop/toTop.css
@@ -2,13 +2,13 @@
   position: fixed;
   height: 3rem;
   width: 3rem;
-  bottom: 20px;
-  right: 30px;
+  bottom: 2rem;
+  right: 2rem;
   z-index: 99;
   border-radius: 50%;
   background-color: var(--primary-accent-color);
   cursor: pointer;
-  padding: 15px;
+  padding: 0.9rem;
   transition: 0.4s;
 }
 
