--- a/src/screens/Home/homeScreen.css
+++ b/src/screens/Home/homeScreen.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 750px;
+  max-width: 47rem;
 }
 
 .homepage-headings {
