--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -15,13 +15,13 @@
 }
 
 .navbar {
-  height: 7rem;
-  font-size: 1.55rem;
+  height: 4.5rem;
+  font-size: 1.4rem;
 }
 
 .nav-container {
   width: 100%;
-  height: 5rem;
+  height: 4.5rem;
   max-width: 93.75rem;
 }
 
@@ -37,6 +37,7 @@
   align-items: center;
   margin-left: 1.25rem;
   flex-grow: 1;
+  transform: translate(0, 0.4rem);
 }
 
 .nav-menu {
@@ -82,6 +83,18 @@
     height: 100vh;
   }
 
+  .navbar {
+    height: 3rem;
+  }
+  
+  .nav-container {
+    height: 3rem;
+  }
+
+  .nav-logo {
+    transform: translate(0, 0.7rem);
+  }
+
   .nav-menu {
     display: flex;
     flex-direction: column;
@@ -115,7 +128,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 60%);
+    transform: translate(-100%, 10%);
     font-size: 3rem;
     cursor: pointer;
   }
