--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -22,7 +22,8 @@
 .nav-container {
   width: 100%;
   height: 4.5rem;
-  max-width: 93.75rem;
+  /* max-width: 93.75rem; */
+  max-width: 110rem;
 }
 
 .navbar-main-container {
@@ -86,7 +87,7 @@
   .navbar {
     height: 3rem;
   }
-  
+
   .nav-container {
     height: 3rem;
   }
@@ -128,8 +129,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 10%);
-    font-size: 3rem;
+    transform: translate(-100%, 60%);
+    font-size: 1.5rem;
     cursor: pointer;
   }
 }
